# uriCompare

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README
include/: uri_compare.h
src/: main.c  uri_compare.c
